--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <body text="yellow" bgcolor="green">
 <h1>Добро Пожаловать в SNetwork!<h1>
 <a href="https://spuikof.github.io/stube/">STube</a>
+<a href="https://spuikof.github.io/scontact/">SContact</a>
