--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h1>Добро Пожаловать в SNetwork!<h1>
 <a href="https://spuikof.github.io/stube/">STube</a>
 <a href="https://spuikof.github.io/scontact/">SContact</a>
+<a href="https://spuikof.github.io/sgames/">SGames</a>
